--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div id="verticalButtons">
         <button onclick="save()">Save</button>
         <button onclick="discard()">Discard</button>
+        <input type="number" id="carCount" placeholder="Enter number of cars" />
+        <button onclick="startSimulation()">Start Simulation</button>
     <canvas id="networkCanvas"></canvas> 
     <script src="neuralnet.js"></script>
     <script src="sensor.js"></script>
